fix(auth-service): hacer configurable el CORS por variable de entorno
Los origenes permitidos estaban hardcodeados a localhost:3000/5173,
lo cual bloqueaba con 403 "Invalid CORS request" cualquier login
desde el frontend ya desplegado en produccion (Vercel). Ahora se
lee de CORS_ALLOWED_ORIGINS, igual que en el api-gateway.